network-path/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: foo
spec:
  type: ClusterIP
  selector:
    app: foo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
